@@ -4,6 +4,6 @@
    #define __HBQT_VERSION_CH
  
 #define __HB_QT_MAJOR_VERSION_5__        "Qt User Interface Compiler version 5.3.0"
-#define __HBQT_REVISION__                "392"
+#define __HBQT_REVISION__                "393"
  
 #endif
