@@ -16,6 +16,10 @@
    The license applies to all entries newer than 2009-04-28.
 */
 
+2015-01-23 13:22 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r393)
+  + hbqt/qtcore/hbqt_simulator.c
+    + Added missing source in previous commit.
+
 2015-01-23 12:54 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r392)
   * hbide/resources/hbide-2014.png
   * hbqtwidgets/resources/hbdbu-2014.png
